# RPC2023

./: README.md
assignment_1/itr_rpc/: CMakeLists.txt  README.md
assignment_1/itr_rpc/config/: basic.rviz  nikolaus.rviz  nikolaus_compare.rviz  prm.rviz
assignment_1/itr_rpc/launch/: task_3.launch
assignment_1/itr_rpc/map/: nikolaus.tex  prm_hard.yaml  prm_honor_student.yaml
assignment_1/itr_rpc/nodes/: collision_service.py  compare.py  dummy_fk.py  dummy_ik.py  dummy_prm.py  task1_4.py
assignment_1/itr_rpc/robots/: 2dofplanar.urdf  3dofnonplanar.urdf  3dofplanar.urdf  base_link.urdf
assignment_2/ws_rpc/.catkin_tools/profiles/default/: devel_collisions.txt
assignment_2/ws_rpc/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
assignment_2/ws_rpc/devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  local_setup.sh  setup.sh
assignment_2/ws_rpc/devel/.private/itr_rpc/: local_setup.sh  setup.sh
assignment_2/ws_rpc/devel/include/itr_rpc/: FK_Control.h  IK_Solve.h  IK_SolveRequest.h  IK_SolveResponse.h  KinematicsConfig.h  LineCollision.h  LineCollisionRequest.h  LineCollisionResponse.h  PointCollision.h  PointCollisionRequest.h  PointCollisionResponse.h
assignment_2/ws_rpc/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  itr_rpc.pc
assignment_3/ws_rpc/.catkin_tools/profiles/default/: devel_collisions.txt
assignment_3/ws_rpc/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
assignment_3/ws_rpc/src/itr_rpc/: .gitignore
(+189 files in other folders)
